--- a/action.yml
+++ b/action.yml
@@ -7,10 +7,6 @@ inputs:
     description: "Ollama model to use (e.g., llama2, codellama, mistral)"
     required: true
     default: "smollm2:135m"
-  timeout:
-    description: "Timeout in seconds for operations"
-    required: false
-    default: "300"
 outputs:
   server-url:
     description: "URL of the Ollama server"
@@ -176,10 +172,13 @@ runs:
     - name: Pull Model
       shell: bash
       run: |
-        if [ "${{ steps.platform.outputs.platform }}" = "macos" ]; then
-          gtimeout ${{ inputs.timeout }} ollama pull ${{ inputs.model }}
+        echo "Starting model pull for ${{ inputs.model }}..."
+
+        if ollama pull ${{ inputs.model }}; then
+          echo "Model pulled successfully!"
         else
-          timeout ${{ inputs.timeout }} ollama pull ${{ inputs.model }}
+          echo "Error pulling model (Exit code: $?)"
+          exit 1
         fi
 
     - name: Verify Server Status
